# 24h_bot

./: README.md  app.py  index.html  main.py  pyproject.toml  requirements.txt
app/: main.py
app/templates/: index.html
bots/: martingale_bot.py  sample_strategy.py
static/: script.js  style.css
templates/: index.html  login.html
