[tool.poetry]
name = "my-dashboard-backend"
version = "0.1.0"
description = "Dashboard web service with FastAPI"
authors = ["Your Name <you@example.com>"]
package-mode = false  # ✨ 핵심: 이 줄이 있어야 Render에서 에러가 안 납니다!


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"  # <-- 이 줄을 추가해 주세요!
